dataset1235/2025-2/2318198438/users/3154614172/executions/1897677159_4233865845.log
== SUBMISSION (2025-08-26 00:45:46)
-- CODE: 
# Programa que converte a temperatura em celsius para fahrenheit
celsius = float(input('celsius'))
fahrenheit = celsius * 9/5 + 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
celsius-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
celsius14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
celsius212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
celsius68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
celsius32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
celsius86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:44:13)
-- CODE: 
# Programa que converte a temperatura em celsius para fahrenheit
celsius = float(input(celsius))
fahrenheit = celsius * 9/5 + 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:44:14)
-- CODE: 
# Programa que converte a temperatura em celsius para fahrenheit
celsius = float(input(celsius))
fahrenheit = celsius * 9/5 + 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:42:42)
-- CODE: 
# Programa que converte a temperatura em celsius para fahrenheit
celsius = float(input(celsius))
fahrenheit = celsius * 9/5 + 32

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:44:54)
-- CODE: 
# Programa que converte a temperatura em celsius para fahrenheit
celsius = float(input(celsius))
fahrenheit = celsius * 9/5 + 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:45:27)
-- CODE: 
# Programa que converte a temperatura em celsius para fahrenheit
celsius = float(input('celsius'))
fahrenheit = celsius * 9/5 + 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
celsius-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
celsius14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
celsius212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
celsius68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
celsius32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
celsius86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:44:14)
-- CODE: 
# Programa que converte a temperatura em celsius para fahrenheit
celsius = float(input(celsius))
fahrenheit = celsius * 9/5 + 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:44:14)
-- CODE: 
# Programa que converte a temperatura em celsius para fahrenheit
celsius = float(input(celsius))
fahrenheit = celsius * 9/5 + 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:44:10)
-- CODE: 
# Programa que converte a temperatura em celsius para fahrenheit
celsius = float(input(celsius))
fahrenheit = celsius * 9/5 + 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:44:53)
-- CODE: 
# Programa que converte a temperatura em celsius para fahrenheit
celsius = float(input(celsius))
fahrenheit = celsius * 9/5 + 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:44:55)
-- CODE: 
# Programa que converte a temperatura em celsius para fahrenheit
celsius = float(input(celsius))
fahrenheit = celsius * 9/5 + 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:44:12)
-- CODE: 
# Programa que converte a temperatura em celsius para fahrenheit
celsius = float(input(celsius))
fahrenheit = celsius * 9/5 + 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = float(input(celsius))
                          ^^^^^^^
NameError: name 'celsius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
